# oop_education

./: CMakeLists.txt
src/: main.cpp  my_class.cpp  my_class.h  my_parent_class.cpp  my_parent_class.h
